Gomb hozzáadva,elhelyezés változtatva,gomb funkció

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/textDisplay"
         android:layout_centerHorizontal="true"
-        android:text="Nyomj rám"/>
+        android:text="Nyomj rám"
+        android:id="@+id/gomb"/>
 
 </RelativeLayout>
